--- a/src/components/cart-dropdown/cart-dropdown.style.scss
+++ b/src/components/cart-dropdown/cart-dropdown.style.scss
@@ -21,7 +21,7 @@
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
+    overflow-y: scroll;
   }
 
   button {
